Version 2.02.72 - 28th July 2010  [CVE-2010-2526]
=================================================
  Change clvmd to communicate with lvm2 via a socket in /var/run/lvm.
  Return controlled error if clvmd is run by non-root user.
  Add configure --default-run-dir for /var/run/lvm.

Version 2.02.71 - 28th July 2010
================================
  Document LVM fault handling in doc/lvm_fault_handling.txt.
  Make vgck warn about missing PVs.
  Clarify help text for vg_mda_count.
  Check if cluster log daemon is running before allowing cmirror create.
  Add unit-tests dir.
  Add configure --enable-testing and reports and report-generators dirs.
  Correct LV list order used by lvconvert when splitting a mirror.
  Check if LV with specified name already exists when splitting a mirror.
  Fix suspend/resume logic for LVs resulting from splitting a mirror.
  Update pvcreate, {pv|vg}change, and lvm.conf man pages about metadataignore.
  Switch cmirrord and clvmd to use dm_create_lockfile.
  Allow clvmd pidfile to be configurable.
  Update comments about memory handling in lvm2app.h.
  Add more verbose messages while checking volume_list and hosttags settings.
  Add log_error when strdup fails in {vg|lv}_change_tag().
  Remove unnecessary includes in liblvm files.
  Use __attribute__ consistently throughout.
  Fix redundant declarations and always compile with -Wredundant-decls.
  Fix possible hang when all mirror images of a mirrored log fail.
  Pass metadataignore to pv_create, pv_setup, _mda_setup, and add_mda.
  Init mda->list in mda_copy.
  Do not log backtrace in valid _lv_resume() code path.
  Cleanup help strings in configure.in.
  Prompt if metadataignore with vgextend or pvchange would adjust vg_mda_copies.
  Adjust vg_mda_copies if metadataignore given with vgextend or pvchange.
  Adjust auto-metadata repair and caching logic to try to cope with empty mdas.

Version 2.02.70 - 6th July 2010
===============================